# rustyinject

./: Cargo.toml  LICENSE  README.md  README.tpl
examples/axum/: Cargo.toml
examples/axum/src/: analytics.rs  app.rs  main.rs  posts.rs
src/: container.rs  deps_list.rs  injector.rs  lib.rs
src/injector/: constructor_factory.rs  factory.rs  singleton.rs  singleton_cloned.rs
