[package]
name = "rustyinject"
authors = ["AlexSherbinin <alex.sherbinin.andr@gmail.com>"]
description = "Zero-cost, compile-time DI framework for Rust"
version = "0.1.0"
repository = "https://github.com/AlexSherbinin/rustyinject"
readme = "README.md"
license = "MIT"
edition = "2021"

keywords = ["di", "ioc", "dependency-injection"]
categories = ["dependency-injection"]

[dependencies]
