[workspace]
resolver = "2"
members = [".", "examples/axum"]

[workspace.package]
authors = ["AlexSherbinin <alex.sherbinin.andr@gmail.com>"]
description = "Zero-cost, compile-time DI framework for Rust"
version = "0.1.1"
repository = "https://github.com/AlexSherbinin/rustyinject"
readme = "README.md"
license = "MIT"
edition = "2021"
keywords = ["di", "ioc", "dependency-injection"]
categories = ["dependency-injection"]

[package]
name = "rustyinject"
authors.workspace = true
description.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
